--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-image-crop-tool",
-  "version": "1.0.15",
+  "version": "1.1.0",
   "description": "A react native image crop tool",
   "main": "index.js",
   "scripts": {
@@ -16,7 +16,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:kasra-co/react-image-crop-tool.git"
+    "url": "git+ssh://git@github.com:kasra-co/react-image-crop-tool.git"
   },
   "keywords": [
     "Image",
