--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-image-crop-tool",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "A react native image crop tool",
   "main": "index.js",
   "scripts": {
@@ -53,12 +53,12 @@
     "react": "^15.1.0",
     "react-addons-test-utils": "^15.1.0",
     "react-dom": "^15.1.0",
-    "sinon": "^1.17.4"
+    "sinon": "^1.17.4",
+    "material-ui": "^0.15.0"
   },
   "peerDependencies": {
     "react": "^15.1.0",
-    "react-dom": "^15.1.0",
-    "material-ui": "^0.15.0"
+    "react-dom": "^15.1.0"
   },
   "dependencies": {
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
