--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "prepublish": "babel --plugins 'babel-plugin-transform-decorators-legacy' src --ignore __tests__ --out-dir ./dist",
-    "dev": "babel --plugins 'babel-plugin-transform-decorators-legacy' src --ignore __tests__ --out-dir ./dist",
+    "dev": "babel --plugins 'babel-plugin-transform-decorators-legacy' src --ignore __tests__ --out-dir ./dist && cp -r src/style dist",
     "lint": "eslint ./src",
     "lintfix": "eslint ./src --fix",
     "testonly": "mocha $npm_package_options_mocha",
