--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-runtime": "^6.9.2",
     "eslint-plugin-react": "^5.2.2",
+    "fbjs": "^0.8.3",
     "react": "^15.1.0",
     "react-addons-update": "^15.1.0",
     "react-dom": "^15.1.0",
