--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,3 @@
 {
-    "presets": ["es2015", "react", "stage-1", "stage-0"],
-    "plugins": [["transform-assets", {
-                "extensions": ["css"],
-                "name": "[name].[ext]?[sha512:hash:base64:7]",
-              }]]
+    "presets": ["es2015", "react", "stage-1", "stage-0"]
 }
